# dynaudnorm_ladspa

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: compilerwarnings.cmake  cppcheck.cmake
src/: CMakeLists.txt  Common.h  DynamicAudioNormalizer.cpp  DynamicAudioNormalizer.h  FrameBuffer.cpp  FrameBuffer.h  Logging.cpp  Version.cpp  dynaudnorm.cpp
